<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFC107"
    android:padding="20dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/dialogo_tareas"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"

        android:hint="@string/dialogo_hint"
        android:imeOptions="actionDone"
        android:backgroundTint="@color/white"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAgregarTarea"
        android:layout_width="match_parent"
        android:background="#D61054"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:text="@string/dialogo_guardarTarea"
        android:layout_height="wrap_content"/>

</LinearLayout>